@@ -5,6 +5,7 @@ class Net::SSLeay::ASN1_TIME : pointer {
   
   use Net::SSLeay::BIO;
   use Sys::Time::Tm;
+  use Net::SSLeay::ASN1_GENERALIZEDTIME;
   
   # Class Methods
   native static method new : Net::SSLeay::ASN1_TIME ();
@@ -14,16 +15,12 @@ class Net::SSLeay::ASN1_TIME : pointer {
   
   native method check : int ();
   
-  native method DESTROY : void ();
-  
   native method print : int ($b : Net::SSLeay::BIO);
   
   native method to_tm : int ($tm : Sys::Time::Tm);
-
-=pod TODO
-
-ASN1_GENERALIZEDTIME *ASN1_TIME_to_generalizedtime(ASN1_TIME *t, ASN1_GENERALIZEDTIME **out);
-
-=cut
-
+  
+  native method to_generalizedtime : Net::SSLeay::ASN1_GENERALIZEDTIME ();
+  
+  native method DESTROY : void ();
+  
 }
